--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
-    font-family: "Poppins", serif;
+* {
+  font-family: "Poppins", sans-serif;
 }
-
-body{
-    background: rgb(244,244,244);
+body {
+  background: rgb(244, 244, 244);
 }
